Changes in QMPlay2 build 18.02.03:
	- move "My radio stations" into "Radio Browser" tab and add Drag and drop,
	- add YouTube option which allows to sort search results by date,
	- properly open YouTube M3U8 live streams (through youtube-dl),
	- add Hungarian translation file,

Changes in QMPlay2 build 17.12.31:
	- automaticaly rotate movie or set spherical view if is set in metadata,
	- update Ukrainian translation file (Alexey Lugin),
	- add reading of CUE files,
	- VA-API/OpenGL fixes,

Changes in QMPlay2 build 17.12.11:
	- use pan gesture for scrolling on Windows (native) and Android (QScroller),
	- add task bar playback progress and tool buttons on Windows,
	- drop support for Qt < 5.6, CMake < 3.1, and FFmpeg < 2.5,
	- add Ukrainian translation file (Alexey Lugin),
	- update Russian translation file (victorr2007),
	- more mouse interaction with system tray,
	- remove already fixed Qt bug workarounds,
	- use Qt5 JSON parser instead of Json11,
	- add Toast notifications for Android,
	- simplify LineEdit using Qt 5.2 API,
	- remove SoundCloud and ProstoPleer,
	- use "QCommandLineParser",

Changes in QMPlay2 build 17.10.24:
	- add option to stop playback after every file,
	- fix crash in FFmpeg settings on Windows XP,
	- add Datmusic (VK) as Pleer replacement,
	- fix possible crash in RadioBrowser,

Changes in QMPlay2 build 17.10.04:
	- command line seeking bugfix,
	- update for Wbijam changes,
	- CUVID bugfix,

Changes in QMPlay2 build 17.09.16:
	- fix playback position regression introduced in 17.09.13,
	- update German translation (martinkg),

Changes in QMPlay2 build 17.09.13:
	- add "makeitpersonal.co" fallback to Tekstowo,
	- play JPEG videos and photos using CUVID,
	- option to disable MPEG4 videos in CUVID,
	- update German translation (martinkg),
	- add frame skipping for HWAccel,
	- better handling HWAccel errors,
	- allow downloading HLS streams,
	- speed-up subtitles rendering,
	- fix seeking on HLS streams,
	- fix DXVA2 for Radeon GPUs,