@@ -2,6 +2,7 @@ Changes in QMPlay2 build 18.02.03:
 	- move "My radio stations" into "Radio Browser" tab and add Drag and drop,
 	- add YouTube option which allows to sort search results by date,
 	- properly open YouTube M3U8 live streams (through youtube-dl),
+	- allow to move video and subtitles in OpenGL2 video output,
 	- add Hungarian translation file,
 
 Changes in QMPlay2 build 17.12.31:
